# AceServer

./: .dockerignore  README.md  docker-compose-aio.yml  docker-compose.yml
.github/workflows/: docker-build.yml  docker-release.yml
assets/: lista_acestream_unificada.m3u
doc/: NGINX-NPM-SETUP.md  OPERATIONS.md  PLUGIN-CONTROL.md
httpaceproxycpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose-httpaceproxycpp.yml
httpaceproxycpp/http/: index.html  plugins_state.json
httpaceproxycpp/http/epg/: index.html
httpaceproxycpp/http/listas/: index.html
httpaceproxycpp/http/listas/locales/: Interna.m3u  elcanotopbylucasmoom.m3u
httpaceproxycpp/http/player/: index.html  legacy.html
httpaceproxycpp/http/statplugin/: index.html
httpaceproxycpp/include/httpaceproxycpp/: ace_client.hpp  broadcast.hpp  config.hpp  http_client.hpp  http_server.hpp  json.hpp  playlist.hpp  plugins.hpp  proxy.hpp  util.hpp
httpaceproxycpp/src/: ace_client.cpp  broadcast.cpp  config.cpp  http_client.cpp  http_server.cpp  json.cpp  main.cpp  playlist.cpp  plugins.cpp  proxy.cpp  util.cpp
httpaceproxycpp/tests/: test_core.cpp
httpaceproxypy/: docker-compose-aio.yml
httpaceproxypy/http/: index.html
